--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="container hero__grid">
         <div class="hero__text">
           <p class="eyebrow">Hello, I'm</p>
-          <h1>SAMUELyy<span class="accent">.</span></h1>
+          <h1>SAMUEL<span class="accent">.</span></h1>
           <h2 class="subtitle">Data Scientist · Web Developer · Graphics Designer</h2>
           <p class="lead">I build useful digital solutions using <strong>Python, Django, HTML, and CSS.</strong>
             I also specialize in <strong>SQL, MongoDB, web scraping, NumPy, and Pandas</strong> for data manipulation,
