i update the form part

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sammy • Portfolio</title>
   <meta name="description" content="Sammy — Data Scientist, Web Developer & Graphics Designer">
-    <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -287,11 +287,11 @@
         <p class="center muted" style="margin-bottom: 50px;">Open to freelance and collaborations.</p>
         <div class="contact__grid"> -->
 
-          <!-- Contact Form -->
-          <!-- <form class="card form" action="https://formsubmit.co/samueltoluwani169@gmail.com" method="POST"> -->
+    <!-- Contact Form -->
+    <!-- <form class="card form" action="https://formsubmit.co/samueltoluwani169@gmail.com" method="POST"> -->
 
-            <!-- Hidden fields -->
-            <!-- <input type="hidden" name="_captcha" value="false">
+    <!-- Hidden fields -->
+    <!-- <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_template" value="table">
             <input type="hidden" name="_next" value="https://my-portfolio-website-five-roan.vercel.app//thank_you.html">
 
@@ -305,8 +305,8 @@
           </form> -->
 
 
-          <!-- Contact Info -->
-          <!-- <div class="card info">
+    <!-- Contact Info -->
+    <!-- <div class="card info">
             <ul class="links">
               <li>
                 <a href="https://www.facebook.com/profile.php?id=100084670006794" target="_blank">
@@ -352,31 +352,48 @@
     </section> -->
 
     <section id="contact" class="contact section">
-  <div class="container">
-    <h3 class="center" style="font-weight: bolder;">Contact</h3>
-    <p class="center muted" style="margin-bottom: 50px;">Open to freelance and collaborations.</p>
-    <div class="contact__grid">
-      <form class="card form">
-        <!-- Your form fields here -->
-        <div class="row">
+      <div class="container">
+        <h3 class="center" style="font-weight: bolder;">Contact</h3>
+        <p class="center muted" style="margin-bottom: 50px;">Open to freelance and collaborations.</p>
+        <div class="contact__grid">
+          <form class="card form" action="https://formsubmit.co/samueltoluwani169@gmail.com" method="POST">
+            <!-- Hidden fields for FormSubmit -->
+            <input type="hidden" name="_captcha" value="false">
+            <input type="hidden" name="_template" value="table">
+            <input type="hidden" name="_next" value="https://sammy-portfolio-web.vercel.app//thank_you.html">
+            <div class="row">
+              <input type="text" name="name" placeholder="Name" required>
+              <input type="email" name="email" placeholder="Email" required>
+            </div>
+            <textarea name="message" placeholder="Your message" rows="5" required></textarea>
+            <button class="btn btn--primary" type="submit">Send</button>
+          </form>
+          <!-- <form class="card form"> -->
+          <!-- Your form fields here -->
+          <!-- <div class="row">
           <input type="text" placeholder="Name" required>
           <input type="email" placeholder="Email" required>
         </div>
         <textarea placeholder="Your message" rows="5" required></textarea>
         <button class="btn btn--primary" type="submit">Send</button>
-      </form>
-      <div class="card info">
-        <ul class="contact-links">
-          <li><a href="https://www.facebook.com/profile.php?id=100084670006794" target="_blank"><i class="fab fa-facebook"></i> Facebook</a></li>
-          <li><a href="mailto:samueltoluwani169@gmail.com"><i class="fas fa-envelope"></i> samueltoluwani169@gmail.com</a></li>
-          <li><a href="https://github.com/sammy001-cmd" target="_blank"><i class="fab fa-github"></i> sammy001-cmd</a></li>
-          <li><a href="https://linkedin.com/in/oladipupo-samuel-2b44b737b" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-          <li><a href="https://wa.me/2348089088952" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
-        </ul>
+      </form> -->
+          <div class="card info">
+            <ul class="contact-links">
+              <li><a href="https://www.facebook.com/profile.php?id=100084670006794" target="_blank"><i
+                    class="fab fa-facebook"></i> Facebook</a></li>
+              <li><a href="mailto:samueltoluwani169@gmail.com"><i class="fas fa-envelope"></i>
+                  samueltoluwani169@gmail.com</a></li>
+              <li><a href="https://github.com/sammy001-cmd" target="_blank"><i class="fab fa-github"></i>
+                  sammy001-cmd</a></li>
+              <li><a href="https://linkedin.com/in/oladipupo-samuel-2b44b737b" target="_blank"><i
+                    class="fab fa-linkedin"></i> LinkedIn</a></li>
+              <li><a href="https://wa.me/2348089088952" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</section>
+    </section>
 
     <!-- FOOTER -->
     <footer class="footer">
